compiler/tests/invalid_programs/methods/missing_default_arguments.jm
!SemanticError

def foo(bar:Int = 12, i:Int)
end
